[metadata]
name = vdsgen
version = file: vdsgen/VERSION
description = Creates virtual dataset HDF5 files
long_description = file: README.rst
author = Gary Yendell

[options]
packages = find:
install_requires = h5py == 3.0.0
include_package_data = False

[options.entry_points]
console_scripts =
    dls-vds-gen.py = vdsgen.app:main


[nosetests]
verbosity=2
detailed-errors=1
with-coverage=1
cover-branches=1
cover-package=vdsgen
